syntax = "proto3";

package payment.v1;

option go_package = "payment_service/pkg/proto/payment/v1;payment_v1";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service PaymentService {
  rpc CreateCheckoutSession (CreateCheckoutSessionRequest) returns (CreateCheckoutSessionResponse) {
    option (google.api.http) = {
      post: "/v1/payment/checkout"
      body: "*"
    };
  }
  
  rpc HandleStripeWebhook (HandleStripeWebhookRequest) returns (HandleStripeWebhookResponse) {
    option (google.api.http) = {
      post: "/v1/payment/webhook"
      body: "*"
    };
  }
  
  rpc GetSubscriptionInfo (GetSubscriptionInfoRequest) returns (GetSubscriptionInfoResponse) {
    option (google.api.http) = {
      get: "/v1/payment/subscription"
    };
  }
}

message CreateCheckoutSessionRequest {
  string plan_id = 1;
  string success_url = 2;
  string cancel_url = 3;
}

message CreateCheckoutSessionResponse {
  string checkout_session_id = 1;
  string checkout_url = 2;
}

message HandleStripeWebhookRequest {
  string payload = 1;
  string stripe_signature = 2;
}

message HandleStripeWebhookResponse {
  bool success = 1;
  string message = 2;
}

message GetSubscriptionInfoRequest {}

message GetSubscriptionInfoResponse {
  string plan_id = 1;
  string status = 2;
  google.protobuf.Timestamp current_period_start = 3;
  google.protobuf.Timestamp current_period_end = 4;
}